@@ -71,14 +71,4 @@ int printf (const char *fmt, ...);
 /* True if debug mode is enabled.  */
 extern int output_debug;
 
-
-/* Print a debug message.  */
-#define debug(fmt, ...)					\
-  ({							\
-    extern char *program_name;				\
-    if (output_debug)					\
-      printf ("%s:%s: " fmt, program_name,		\
-	      __FUNCTION__, ##__VA_ARGS__);		\
-  })
-
 #endif	/* _OUTPUT_H */
